--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
 <body>
     <main class="main-content">
         <header class="header-banner">
-            <h1 class="main-title"><A></A>Amigo Secreto</h1>
+            <h1 class="main-title animate__animated animate__flash">Amigo Secreto</h1>
             <img src="assets/amigo-secreto.png" alt="Imagen representativa de amigo secreto">
+            <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+          />
         </header>
 
         <section class="input-section">
-            <h2 class="section-title">Digite el nombre de sus amigos</h2>
+            <h2 class="section-title animate__animated animate__rubberBand">Digite el nombre de sus amigos</h2>
+        
             <div class="input-wrapper">
                 <input type="text" id="amigo" class="input-name" placeholder="Escribe un nombre">
                 <button class="button-add" onclick="agregarAmigo()">Añadir</button>
